# ai-training

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: alexeysmirnov__.json  videos_alexeysmirnov__.json
output/: .progress_alexeysmirnov__.json  results_alexeysmirnov__.jsonl
scripts/: analyze_videos.sh  collect_instagram_posts.js
src/: __init__.py  analyzer.py  cli.py  instagram.py  models.py  pipeline.py
src/prompts/: analysis.txt  training_plan_generator.md  training_plan_generator_gpt5.md  training_plan_generator_gpt5_ru.md  training_plan_generator_ru.md
tests/: test_analyzer.py  test_cli.py  test_instagram.py  test_models.py  test_pipeline.py  test_placeholder.py
